syntax = "proto3";
package club.virgilin.proto;

option optimize_for = SPEED;
option java_package = "club.virgilin.proto";
option java_outer_classname = "StudentProto";
option java_multiple_files = true;

service StudentService{
    rpc GetRealNameByUsername(MyRequest) returns(MyResponse){}
}

message MyRequest{
    string username = 1;
}
message MyResponse{
    string realname = 2;
}